# loonaro-agent

./: .gitignore
agent/src/: main.rs
dashboard/: pnpm-lock.yaml
dashboard/app/: page.tsx
platform/core/: moose.config.toml  package-lock.json  package.json
platform/core/app/: index.ts
platform/core/app/apis/: recent_events.ts
platform/core/app/datamodels/: AnalysisReport.ts  FeatureVector.ts  JobLifecycleEvent.ts  JobStatus.ts  Telemetry.ts
platform/core/app/ingest/: JobLifecycleEvent.ts
platform/core/app/views/: FeatureVectorView.ts  JobStatusView.ts
platform/core/app/workflows/: ScoringWorkflow.ts
platform/mcp/: index.ts  package-lock.json  package.json
runtime/: Cargo.toml  sandbox-startup.ps1
runtime/agent/: Cargo.toml
runtime/agent/src/: commandline.rs  injector.rs  main.rs  memory.rs  pipe_server.rs
runtime/agent/src/etw_events/: dns.rs  file.rs  mod.rs  network.rs  process.rs  registry.rs
runtime/fakenet/: Cargo.toml
runtime/fakenet/src/: config.rs  dns.rs  http.rs  lib.rs  logging.rs  protocol.rs  rules.rs
runtime/lib/comms/src/: lib.rs
runtime/lib/etw/: Cargo.toml
runtime/lib/etw/src/: error.rs  lib.rs
runtime/lib/etw/src/payload/: dns.rs  file.rs  mod.rs  network.rs  process.rs  registry.rs
runtime/monitor/: Cargo.toml  ca.der
runtime/monitor-hook/: Cargo.toml
runtime/monitor-hook/src/: config.rs  lib.rs  pipe.rs
runtime/monitor-hook/src/antievasion/: cpu.rs  filesystem.rs  firmware.rs  hardware.rs  human.rs  mod.rs  network.rs  os_features.rs  os_objects.rs  os_queries.rs  processes.rs  registry.rs  timing.rs  ui.rs
runtime/monitor-hook/src/hooks/: crypto.rs  generic.rs  memory.rs  mod.rs  network.rs  process.rs
runtime/monitor/src/: config.rs  display.rs  main.rs  pki.rs  processor.rs  telemetry.rs  yara_scan.rs
runtime/monitor/src/artifacts/: collector.rs  mod.rs  types.rs
runtime/monitor/src/artifacts/config/: file.rs  memory.rs  mod.rs  network.rs  registry.rs  settings.rs
runtime/orchestrator/: Cargo.toml  ca.der  log.txt  loonaro.db  run_error.txt  test_submit.py
runtime/orchestrator/src/: config.rs  main.rs  state.rs
runtime/orchestrator/src/api/: handlers.rs  mod.rs
runtime/orchestrator/src/providers/: mod.rs  windows.rs
runtime/scoring/: Cargo.toml  check_output.txt
runtime/scoring/policies/: ransomware.rhai
runtime/scoring/src/: config.rs  engine.rs  main.rs  models.rs
runtime/yara-scanner/src/: lib.rs
