[package]
name = "monitor-hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
minhook = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minicbor = { version = "0.20", features = ["derive"] }
once_cell = "1.19"
log = "0.4"
anyhow = "1.0"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Input_KeyboardAndMouse",
]
