[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
tempfile = "3"
async-trait = "0.1.89"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
schemars = "0.8"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# Local crates
yara-scanner = { path = "../yara-scanner" }
fakenet = { path = "../fakenet" }
